* unit test: Fix minor Safari 2.x bugs in functional event tests.

* Rename Fuse.Ajax.Base and Fuse.Ajax.TimedUpdater `defaultOptions` object to `options` and fix options related bugs in Fuse.Ajax.TimedUpdater. [jddalton, Joe Gornick, kitsg]
  Note: Backwards compatibility warning.

* Add Ext.DomQuery support and allow the active css engine to be dynamically set in the unit tests. [jddalton]

* Ensure that Fuse.Object() converts native objects as well as primitives to Fuseboxed natives. [jddalton]

* Ensure `max` and `min` methods of Fuse.List and Fuse.Enumerable don't return augmented values when using callbacks. [jddalton]

* Optimize Fuse.Range `max`, `min`, 'size', and `toArray` methods. [Prototype LH #117] [jddalton, Michael M Slusarz]

* Stop escaping quotes in Fuse.String#escapeHTML and stop stripping tags in Fuse.String#unescapeHTML. [Prototype LH #722, #729] [jddalton, mck, SWilk, T.J. Crowder, Tobie Langel] 

* Fix IE bug where Fuse.String#match(pattern) incorrectly sets the pattern's `lastIndex` property. [jddalton]

* Optimize Fuse.String#lastIndexOf and fix a Chrome bug where negative positions aren't set to 0. [jddalton]

* Optimize property lookup speeds by storing references to longer namespaced objects and simplifying method aliases. [jddalton]

* Make Fusebox fallback on Fuse._docEl instead of document HEAD when inserting an iframe. [fearphage, jddalton]

* Ensure IE8 EMBED elements are extended manually and APPLET/EMBED/OBJECT elements are extended by Element.Simulated methods. [Prototype LH #681] [jddalton, kangax, Nick Stakenburg]

* Avoid an alert in IE8 when testing for ELEMENT_OBJECT_AND_RELATIVES_FAILS_TO_INHERIT_FROM_PROTOTYPE and Java is not installed. [Prototype LH #668] [Andrew Dupont, jddalton, kangax, orv]

* Wrap variable assignments in return statements with parentheses to ensure Chrome 1 support. [jddalton]
