@@ -2,14 +2,17 @@
 
   Fuse.addNS('Timer', {
     'constructor': (function() {
-      function Timer(callback, interval) {
+      function Timer(callback, interval, options) {
         if (!(this instanceof Timer))
-          return new Timer(callback, interval);
+          return new Timer(callback, interval, options);
 
         this.callback     = callback;
         this.interval     = interval;
         this.executing    = false;
         this.onTimerEvent = Fuse.Function.bind(onTimerEvent, this);
+
+        this.options = Fuse.Object._extend(Fuse.Object
+          .clone(this.constructor.options), options);
       }
 
       function onTimerEvent() {
@@ -33,13 +36,15 @@
     };
 
     this.start = function start() {
-      this.timerID = global.setTimeout(this.onTimerEvent, this.interval * 1000);
+      this.timerID = global.setTimeout(this.onTimerEvent,
+        this.interval * this.options.multiplier);
       return this;
     };
 
     this.stop = function stop() {
-      if (this.timerID === null) return;
-      global.clearTimeout(this.timerID);
+      var id = this.timerID;
+      if (id === null) return;
+      global.clearTimeout(id);
       this.timerID = null;
       return this;
     };
@@ -47,3 +52,7 @@
     // prevent JScript bug with named function expressions
     var execute = null, start = null, stop = null;
   }).call(Fuse.Timer.Plugin);
+
+  Fuse.Timer.options = {
+    'multiplier': 1
+  };
