@@ -2,13 +2,12 @@ new Test.Unit.Runner({
 
   'testTimerStop': function() {
     function timerEventFired(timer) {
+      // timerEventFired will stop the Timer after 3 callbacks
       if (++timerEventCount > 2) timer.stop();
     }
 
-    var timerEventCount = 0;
-
-    // timerEventFired will stop the Timer after 3 callbacks
-    Fuse.Timer(timerEventFired, 0.05).start();
+    var timerEventCount = 0,
+     timer = Fuse.Timer(timerEventFired, 50).start();
 
     this.wait(600, function() {
       this.assertEqual(3, timerEventCount);
@@ -21,7 +20,7 @@ new Test.Unit.Runner({
       throw new Error;
     }
 
-    var timer = Fuse.Timer(timerEventFired, 0.05);
+    var timer = Fuse.Timer(timerEventFired, 50);
 
     // we don't want to stop timer's callback from throwing errors
     timer.onTimerEvent = Fuse.Function.wrap(timer.onTimerEvent,
@@ -32,5 +31,30 @@ new Test.Unit.Runner({
     this.wait(100, function() {
       this.assertEqual(false, timer.executing);
     });
+  },
+
+  'testTimerDefaultOptions': function() {
+    function timerEventFired(timer) {
+      timerEventCount++;
+      timer.stop();
+    }
+
+    var timerEventCount = 0,
+     backup = Fuse.Object.clone(Fuse.Timer.options);
+
+    Fuse.Object.extend(Fuse.Timer.options,  { 'multiplier': 1000 });
+
+    var timer = Fuse.Timer(timerEventFired, 2).start();
+
+    this.wait(50, function() {
+      this.assertEqual(0, timerEventCount);
+
+      this.wait(2000, function() {
+        this.assertEqual(1, timerEventCount);
+      })
+    });
+
+    // restore
+    Fuse.Timer.options = backup;
   }
 });
